Project ui done and some responsivness is add

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,10 +64,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/
-  #   - assets/icons/
-  #   - assets/images/
+  assets:
+    - assets/
+    - assets/icons/
+    - assets/images/
+    - assets/images/api/
+    - assets/images/ecom/
+    - assets/images/portfolio_img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
