--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^6.2.1
   animated_text_kit: ^4.2.2
   carousel_slider: ^5.0.0
+  url_launcher: ^6.3.1
+  universal_html: ^2.2.4
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/pdf/Ankit-Resume.pdf
     - assets/icons/
     - assets/images/
     - assets/images/api/
