--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   url_launcher: ^6.3.1
   universal_html: ^2.2.4
   toastification: ^2.3.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
